[package]
name = "mini-scheme-driver"
version = "0.1.0"
authors = ["Yukio Tanaka <news7vip@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mini-scheme = { path = "../mini-scheme", features = ["full"] }
tokio = { version = "1", features = ["sync", "rt", "macros", "rt-multi-thread", "signal"] }
signal-hook-registry = "1"
signal-hook = "0.3"
futures-util = "0.3"
once_cell = "1"
