[package]
name = "mini-scheme"
version = "0.1.0"
authors = ["Yukio Tanaka <news7vip@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
concurrent = [ "tokio/full" ]
full = [ "concurrent" ]

[dependencies]
if_chain = "1"
uuid = { version = "0.8", features = ["v4", "wasm-bindgen"] }
either = "1"
thiserror = "1"
petgraph = "0.5"
tokio = { version = "1", optional = true }
num-rational = "0.4"
